--- a/src/index.css
+++ b/src/index.css
@@ -251,3 +251,11 @@ input[type=date] {
 .blue {
   background-color: #C2EEF1;
 }
+
+.print > header {
+  background-color: white;
+}
+
+.print > header a {
+  color: #253C6A;
+}
