--- a/src/index.css
+++ b/src/index.css
@@ -187,6 +187,10 @@ ul > a {
   padding-top: 12%;
 }
 
+.dash-nav-padding {
+  padding-top: 80px;
+}
+
 form h3 {
   padding-bottom: 30px;
 }
@@ -260,6 +264,6 @@ input[type=date] {
     color: #F82D40;
 }
 
-.graph {
-  padding-bottom: 30px;
+.graph-spacing {
+  height: 30px;
 }
