--- a/src/index.css
+++ b/src/index.css
@@ -332,6 +332,11 @@ input[type=date] {
 @media (max-width: 960px) {
   div.graphs { padding: 5px }
   div.single-event { width: 295px }
+  div.narrowLinks { height: 250px }
+}
+
+@media (max-width: 530px) {
+  div.graphs { display: none }
 }
 
 @media (min-width: 480px) {
